--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: black;
   text-decoration: inherit;
 }
 a:hover {
@@ -24,11 +24,12 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
   min-width: 320px;
   min-height: 100vh;
+  color: white;
 }
 
 h1 {
@@ -48,12 +49,36 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: lightblue;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+ul {
+  list-style-type: none;
+}
+
+ul > * {
+  margin-left: 10px;
+  border: 2px solid white;
+  border-radius: 10px;
+  background: white
+}
+
+.navbar{
+  display: flex;
+  align-items: center;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.navbar-menu {
+  display: flex;
+  margin-left: auto;
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
