--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,6 +37,10 @@ h1 {
   line-height: 1.1;
 }
 
+h2 {
+  text-align: center;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -89,6 +93,75 @@ ul > * {
   border: 2px solid white;
   border-radius: 10px;
   background-color: #ffffff;
+}
+
+body {
+  font: 16px Arial, Verdana, Tahoma, Sans-serif;
+}
+
+.container {
+  width: 665px;
+  background: #0493f2c7;
+  margin: 0 auto;
+  padding: 16px;
+  border-radius: 10px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.wrapper {
+  margin: 8px 0;
+}
+
+.search-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-content: stretch;
+  align-items: flex-start;
+}
+
+input {
+  min-width: 20px;
+  padding: 8px;
+  margin: 0 4px 0 0;
+  border: 1px solid #666;
+  border-radius: 5px;
+  height: 30px;
+}
+
+.button {
+  padding: 8px 16px;
+  min-height: 48px;
+  min-width: 10px;
+  word-wrap: nowrap;
+  background: #000;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+
+input {
+    order: 0;
+    align-self: auto;  
+}
+
+.search {
+  flex: 2 1 auto;
+}
+
+.date-from {
+  flex: 1 1 auto;
+}
+
+.date-to {
+  flex: 1 1 auto;
+}
+
+.button {
+    order: 4;
+    flex: 0 1 auto;
+    align-self: auto;
 }
 
 
