Add basic sidebar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,6 +91,9 @@ ul > * {
   background-color: #ffffff;
 }
 
+.sidebar-align {
+  display: flex;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
