Add very basic functionality to sidebar
Display ID and type of node in sidebar upon click

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -176,6 +176,7 @@ input {
 
 .sidebar {
   width: 250px;
+  height: 484px;
   background-color: lightgrey;
   border-radius: 10px;
   padding: 10px;
