Format main layout

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -95,18 +95,12 @@ ul > * {
   margin-left: 25px
 }
 
-.cytoscape-graph{
-  border: 2px solid white;
-  border-radius: 10px;
-  background-color: #ffffff;
-}
-
 body {
   font: 16px Arial, Verdana, Tahoma, Sans-serif;
 }
 
 .container {
-  width: 665px;
+  width: 1050px;
   background: #0493f2c7;
   margin: 0 auto;
   padding: 16px;
@@ -118,11 +112,15 @@ body {
   margin: 8px 0;
 }
 
+.wrapper h2 {
+  text-align: center;
+}
+
 .search-container {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: stretch;
   align-items: flex-start;
 }
@@ -170,16 +168,37 @@ input {
     align-self: auto;
 }
 
+.cytoscape-graph{
+  border: 2px solid white;
+  border-radius: 10px;
+  background-color: #ffffff;
+  height: 480px;
+  width: 800px;
+}
+
+.search-box-align {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
 .sidebar-align {
   display: flex;
+  justify-content: center;
 }
 
 .sidebar {
   width: 250px;
-  height: 484px;
+  height: 480px;
   background-color: lightgrey;
+  border: 2px solid lightgrey;
   border-radius: 10px;
   padding: 10px;
+}
+
+.sidebar h2, p {
+  color: black;
 }
 
 @media (prefers-color-scheme: light) {
