--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,16 @@ a:hover {
   color: #535bf2;
 }
 
+.sidebar-link {
+  font-weight: 500;
+  text-decoration: none;
+  background-color: #0493f2c7;
+  color: white;
+  padding: 5px;
+  border-radius: 10px;
+  border: 1px solid white;
+}
+
 body {
   margin: 0px;
   padding: 0px;
