Fix small bug in sidebar and also add amiGO links

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -217,6 +217,14 @@ input {
   margin-top: 1rem;
 }
 
+.center-buttons {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
