--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,7 @@ a {
   color: black;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -62,9 +63,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: lightblue;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -80,14 +83,14 @@ ul {
   list-style-type: none;
 }
 
-ul > * {
+ul>* {
   margin-left: 10px;
   border: 2px solid white;
   border-radius: 10px;
   background: white
 }
 
-.navbar{
+.navbar {
   display: flex;
   align-items: center;
   padding-left: 25px;
@@ -128,11 +131,14 @@ body {
 
 .search-container {
   display: flex;
+  position: flex-start;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
   align-content: stretch;
   align-items: flex-start;
+  margin-right: 10px;
+  overflow: hidden;
 }
 
 .example {
@@ -141,7 +147,7 @@ body {
   color: white;
 }
 
-.example > a {
+.example>a {
   color: white;
   text-decoration: underline;
   cursor: pointer;
@@ -159,7 +165,7 @@ input {
 .button {
   padding: 8px 16px;
   min-height: 48px;
-  min-width: 10px;
+  min-width: 96px;
   word-wrap: nowrap;
   background: #000;
   color: #fff;
@@ -173,8 +179,8 @@ input {
 }
 
 input {
-    order: 0;
-    align-self: auto;
+  order: 0;
+  align-self: auto;
 }
 
 .search {
@@ -189,7 +195,7 @@ input {
   flex: 1 1 auto;
 }
 
-.cytoscape-graph{
+.cytoscape-graph {
   border: 2px solid white;
   border-radius: 10px;
   background-color: #ffffff;
@@ -218,7 +224,9 @@ input {
   padding: 10px;
 }
 
-.sidebar h2, p, h3 {
+.sidebar h2,
+p,
+h3 {
   color: black;
   word-wrap: break-word;
 }
@@ -229,6 +237,7 @@ input {
   cursor: pointer;
   font-size: 0.8em;
 }
+
 .export:hover {
   color: #0493f2c7;
 }
@@ -238,7 +247,7 @@ input {
   background-color: #EED202;
   border-radius: 10px;
   margin-top: 20px;
-  padding:5px;
+  padding: 5px;
   color: black;
 }
 
@@ -262,10 +271,12 @@ input {
   padding: 8px;
   width: 300px;
 }
+
 .no-autocomplete {
   color: #999;
   padding: 8px;
 }
+
 .autocomplete {
   border: 1px solid #999;
   border-top-width: 0;
@@ -276,15 +287,28 @@ input {
   padding-left: 0;
   width: calc(300px + 1rem);
 }
+
+.k-input {
+  position: flex-end;
+  width: 50px;
+}
+
+.autocomplete-input-container {
+  position: relative;
+  width: 100%;
+}
+
 .autocomplete li {
   padding: 8px;
 }
-.autocomplete > .active,
+
+.autocomplete>.active,
 .autocomplete li:hover {
   background-color: darkgray;
   cursor: pointer;
   font-weight: 700;
 }
+
 .autocomplete li:not(:last-of-type) {
   border-bottom: 1px solid #999;
 }
@@ -294,9 +318,11 @@ input {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
