--- a/client/src/index.css
+++ b/client/src/index.css
@@ -155,6 +155,7 @@ body {
 }
 
 input {
+  position: relative;
   min-width: 20px;
   padding: 8px;
   margin: 0;
@@ -284,7 +285,7 @@ h3 {
   margin-top: 0;
   max-height: 143px;
   overflow-y: auto;
-  padding-left: 0;
+  padding-left: 0px;
   width: 100%;
 }
 
@@ -293,7 +294,7 @@ h3 {
 }
 
 .autocomplete-input-container {
-  /* position: relative; */
+  position: relative;
   width: 330px;
   display: inline-block;
   flex-wrap: nowrap;
