--- a/client/src/index.css
+++ b/client/src/index.css
@@ -112,6 +112,15 @@ body {
   font: 16px Arial, Verdana, Tahoma, Sans-serif;
 }
 
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.content-wrap {
+  flex: 1;
+}
+
 .container {
   width: 1050px;
   height: 175px;
