--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,11 +27,11 @@ a:hover {
 .sidebar-link {
   font-weight: 500;
   text-decoration: none;
-  background-color: #0493f2c7;
+  background-color: #A70E16;
   color: white;
   padding: 5px;
   border-radius: 10px;
-  border: 1px solid white;
+  border: 1px solid #efe6dd;
 }
 
 body {
@@ -71,12 +71,6 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-.close-button {
-  float: right;
-  font-size: 0.7em;
-  margin: 0;
 }
 
 ul {
@@ -125,7 +119,7 @@ body {
 .container {
   width: 1050px;
   height: 175px;
-  background: #0493f2c7;
+  background: #A70E16;
   margin: 0 auto;
   padding: 16px;
   border-radius: 10px;
@@ -169,9 +163,10 @@ body {
 input {
   position: relative;
   min-width: 20px;
+  min-height: 30px;
   padding: 8px;
   margin: 0;
-  border: 1px solid #666;
+  border: none;
   border-radius: 5px;
   height: 30px;
   width: 300px;
@@ -179,14 +174,44 @@ input {
   align-self: auto;
 }
 
-.button {
+select {
+  border: none;
+  position: relative;
+  min-width: 20px;
+  min-height: 30px;
+  padding: 8px;
+  margin: 0;
+  border-radius: 5px;
+  height: 30px;
+  width: 140px;
+  order: 0;
+  align-self: auto;
+}
+
+.search-button {
   padding: 8px 16px;
-  min-height: 48px;
+  min-height: 49px;
   min-width: 96px;
   word-wrap: nowrap;
   background: #000;
   color: #fff;
-  border: 2px solid white;
+  border: 1px solid black;
+  border-radius: 5px;
+  order: 4;
+  flex: 0 1 auto;
+  align-self: auto;
+  height: 30px;
+  text-align: center;
+}
+
+.new-source {
+  padding: 8px 16px;
+  min-height: 50px;
+  min-width: 96px;
+  word-wrap: nowrap;
+  background: #000;
+  color: #fff;
+  border: 2px solid #efe6dd;
   border-radius: 5px;
   order: 4;
   flex: 0 1 auto;
@@ -208,11 +233,12 @@ input {
 }
 
 .cytoscape-graph {
-  border: 2px solid white;
+  border: 2px solid #efe6dd;
   border-radius: 10px 0 0 10px;
-  background-color: #ffffff;
+  background-color: #efe6dd;
   height: 480px;
   width: 800px;
+  margin-right: 2px;
 }
 
 .search-box-align {
@@ -232,8 +258,8 @@ input {
 .sidebar {
   width: 250px;
   height: 480px;
-  background-color: lightgrey;
-  border: 2px solid lightgrey;
+  background-color: #efe6dd;
+  border: 2px solid #efe6dd;
   border-radius: 0 10px 10px 0;
   padding: 10px;
 }
@@ -253,7 +279,7 @@ h3 {
 }
 
 .export:hover {
-  color: #0493f2c7;
+  color: #A70E16;
 }
 
 .query-error {
