--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --graph-blue: #7F95D1;
+  --reed-red: #A70E16;
+  --graph-tan: #EDCB96;
 }
 
 a {
@@ -24,11 +28,31 @@ a:hover {
   color: #535bf2;
 }
 
-.sidebar-link {
+.red-sidebar-link {
   font-weight: 500;
   text-decoration: none;
-  background-color: #A70E16;
+  background-color: var(--reed-red);
   color: white;
+  padding: 5px;
+  border-radius: 10px;
+  border: 1px solid #efe6dd;
+}
+
+.blue-sidebar-link {
+  font-weight: 500;
+  text-decoration: none;
+  background-color: var(--graph-blue);
+  color: white;
+  padding: 5px;
+  border-radius: 10px;
+  border: 1px solid #efe6dd;
+}
+
+.tan-sidebar-link {
+  font-weight: 500;
+  text-decoration: none;
+  background-color: var(--graph-tan);
+  color: black;
   padding: 5px;
   border-radius: 10px;
   border: 1px solid #efe6dd;
