--- a/client/src/index.css
+++ b/client/src/index.css
@@ -143,10 +143,10 @@ body {
 .container {
   width: 1050px;
   height: 175px;
-  background: #A70E16;
+  background: var(--reed-red);
   margin: 0 auto;
   padding: 16px;
-  border-radius: 10px;
+  border-radius: 10px 10px 0 0;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -258,7 +258,7 @@ select {
 
 .cytoscape-graph {
   border: 2px solid #efe6dd;
-  border-radius: 10px 0 0 10px;
+  border-radius: 0 0 0 10px;
   background-color: #efe6dd;
   height: 480px;
   width: 800px;
@@ -284,8 +284,9 @@ select {
   height: 480px;
   background-color: #efe6dd;
   border: 2px solid #efe6dd;
-  border-radius: 0 10px 10px 0;
+  border-radius: 0 0 10px 0;
   padding: 10px;
+  margin-left: 2px;
 }
 
 .sidebar h2,
@@ -303,7 +304,7 @@ h3 {
 }
 
 .export:hover {
-  color: #A70E16;
+  color: var(--reed-red);
 }
 
 .query-error {
