--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,6 +121,13 @@ ul>* {
   margin-left: auto;
 }
 
+.navbar-menu li {
+  padding: 6px 3px 3px 3px;
+  background-color: #EDCB96;
+  border-color: #000;
+  border-radius: 4px;
+}
+
 .main-layout-body {
   align-items: center;
   margin-left: 25px
