--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,7 @@ a {
   color: black;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -62,9 +63,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: lightblue;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -80,14 +83,14 @@ ul {
   list-style-type: none;
 }
 
-ul > * {
+ul>* {
   margin-left: 10px;
   border: 2px solid white;
   border-radius: 10px;
   background: white
 }
 
-.navbar{
+.navbar {
   display: flex;
   align-items: center;
   padding-left: 25px;
@@ -152,7 +155,7 @@ body {
   color: white;
 }
 
-.example > a {
+.example>a {
   color: white;
   text-decoration: underline;
   cursor: pointer;
@@ -182,8 +185,8 @@ input {
 }
 
 input {
-    order: 0;
-    align-self: auto;
+  order: 0;
+  align-self: auto;
 }
 
 .search {
@@ -198,7 +201,7 @@ input {
   flex: 1 1 auto;
 }
 
-.cytoscape-graph{
+.cytoscape-graph {
   border: 2px solid white;
   border-radius: 10px 0 0 10px;
   background-color: #ffffff;
@@ -227,17 +230,11 @@ input {
   padding: 10px;
 }
 
-.sidebar h2, p, h3 {
+.sidebar h2,
+p,
+h3 {
   color: black;
   word-wrap: break-word;
-}
-
-.legend-align {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
 }
 
 .export {
@@ -246,6 +243,7 @@ input {
   cursor: pointer;
   font-size: 0.8em;
 }
+
 .export:hover {
   color: #0493f2c7;
 }
@@ -255,7 +253,7 @@ input {
   background-color: #EED202;
   border-radius: 10px;
   margin-top: 20px;
-  padding:5px;
+  padding: 5px;
   color: black;
 }
 
@@ -272,6 +270,14 @@ input {
   text-overflow: ellipsis;
   height: 120px;
   text-wrap: break-word;
+}
+
+.legend-align {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .legend h3 {
@@ -327,9 +333,11 @@ input {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
