--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@
   --graph-blue: #7F95D1;
   --reed-red: #A70E16;
   --graph-tan: #EDCB96;
+  --light-background: #EFE6DD;
 }
 
 a {
@@ -148,7 +149,7 @@ body {
 }
 
 .container {
-  width: 1050px;
+  width: 1048px;
   height: 175px;
   background: var(--reed-red);
   margin: auto;
@@ -242,7 +243,7 @@ select {
   word-wrap: nowrap;
   background: #000;
   color: #fff;
-  border: 2px solid #efe6dd;
+  border: 2px solid var(--light-background);
   border-radius: 5px;
   order: 4;
   flex: 0 1 auto;
@@ -264,12 +265,13 @@ select {
 }
 
 .cytoscape-graph {
-  border: 2px solid #efe6dd;
-  border-radius: 0 0 0 10px;
-  background-color: #efe6dd;
+  border: 2px solid var(--light-background);
+  border-radius: 0;
+  background-color: var(--light-background);
   height: 480px;
   width: 800px;
   margin-right: 2px;
+  margin-top: 5px;
 }
 
 .search-box-align {
@@ -289,11 +291,12 @@ select {
 .sidebar {
   width: 250px;
   height: 480px;
-  background-color: #efe6dd;
-  border: 2px solid #efe6dd;
-  border-radius: 0 0 10px 0;
+  background-color: var(--light-background);
+  border: 2px solid var(--light-background);
+  border-radius: 0;
   padding: 10px;
   margin-left: 2px;
+  margin-top: 5px;
   overflow-y: scroll;
 }
 
@@ -441,7 +444,7 @@ select {
 }
 
 .go-definition {
-  background-color: #efe6dd;
+  background-color: var(--light-background);
   color: #000;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -474,6 +477,18 @@ select {
   top: 0;
 }
 
+.legend {
+  width: 1045px;
+  height: 300px;
+  margin-left: 1px;
+  background-color: var(--light-background);
+  border: 2px solid var(--light-background);
+  margin-top: 5px;
+  border-radius: 0 0 10px 10px;
+  padding: 16px;
+  justify-content: center;
+}
+
 .legend-align {
   display: flex;
   flex-direction: column;
@@ -482,13 +497,13 @@ select {
   align-items: center;
 }
 
-.legend h3 {
-  color: white;
+.legend h2,
+h3 {
+  color: black;
   text-align: center;
 }
 
-.white-text {
-  color: white;
+.legend-text {
   display: inline-block
 }
 
@@ -508,7 +523,7 @@ select {
 }
 
 .grey-line {
-  background-color: lightgrey;
+  background-color: #ACA9A4;
   border: none;
   height: 3px;
   width: 60px;
@@ -528,6 +543,38 @@ select {
 
 .key-align {
   display: flex;
+}
+
+.source-node-symbol {
+  color: var(--reed-red);
+  border-color: #000;
+  border-width: 3px;
+}
+
+.source-node-symbol {
+  border: 2px solid black;
+  background-color: var(--reed-red);
+  height: 25px;
+  border-radius: 50%;
+  width: 25px;
+  display: inline-block;
+}
+
+.go-protein-symbol {
+  border: 2px solid black;
+  background-color: var(--graph-blue);
+  height: 25px;
+  width: 25px;
+  display: inline-block;
+}
+
+.intermediate-symbol {
+  border: 2px solid black;
+  background-color: var(--graph-tan);
+  height: 15px;
+  border-radius: 50%;
+  width: 15px;
+  display: inline-block;
 }
 
 @media (prefers-color-scheme: light) {
