--- a/client/src/index.css
+++ b/client/src/index.css
@@ -98,11 +98,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-ul {
+.navbar > ul {
   list-style-type: none;
 }
 
-ul>* {
+.navbar > ul > * {
   margin-left: 10px;
   border: 2px solid white;
   border-radius: 10px;
@@ -131,7 +131,6 @@ ul>* {
 
 .main-layout-body {
   align-items: center;
-  margin-left: 25px
 }
 
 body {
@@ -300,9 +299,7 @@ select {
   overflow-y: scroll;
 }
 
-.sidebar h2,
-p,
-h3 {
+.sidebar > h2, h3, p{
   color: black;
   word-wrap: break-word;
 }
@@ -586,6 +583,46 @@ h3 {
   animation: spin 2s linear infinite;
   align-self: center;
   margin-top: 200px;
+}
+
+.about-body {
+  background-color: var(--reed-red);
+  width: 1000px;
+  margin:auto;
+  margin-top: 50px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 25px;
+  padding-top: 5px;
+  border-radius: 10px;
+  color: white;
+  box-shadow: 0px -0px 10px 5px black;
+
+}
+
+.about-body > p {
+  color: white;
+  text-align: justify;
+
+}
+
+.about-body > h1, .about-body h2, .about-body h3 {
+  text-align: left;
+  color: white;
+}
+
+.about-body > ul {
+  list-style-type: disc;
+}
+
+.about-body> p > a, .about-body > p > ul > li > a {
+  color: rgb(238, 122, 40);
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.about-body> p > a:hover, .about-body > p > ul > li > a:hover {
+  color: #535bf2;
 }
 
 @keyframes spin {
