--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color:  #d5abab;
+  background-color: #d5abab;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -34,7 +34,7 @@ a:hover {
   color: #535bf2;
 }
 
-.website-title{
+.website-title {
   font-family: 'Lora', serif;
   font-weight: 500;
 }
@@ -50,7 +50,7 @@ a:hover {
 }
 
 .red-sidebar-link:hover {
-  color:white;
+  color: white;
   background-color: var(--reed-red-hover);
 }
 
@@ -65,7 +65,7 @@ a:hover {
 }
 
 .blue-sidebar-link:hover {
-  color:white;
+  color: white;
   background-color: var(--graph-blue-hover);
 }
 
@@ -118,11 +118,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.navbar > ul {
+.navbar>ul {
   list-style-type: none;
 }
 
-.navbar > ul > * {
+.navbar>ul>* {
   margin-left: 10px;
   color: black;
 }
@@ -133,7 +133,7 @@ button:focus-visible {
   padding-left: 25px;
   padding-right: 25px;
   border-bottom: solid;
-  background:#A70E16;
+  background: #A70E16;
 }
 
 .navbar-menu {
@@ -181,7 +181,7 @@ body {
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.query-title{
+.query-title {
   border-bottom: 3px solid white;
   padding-bottom: 5px;
 }
@@ -331,7 +331,9 @@ select {
 
 }
 
-.sidebar > h2, h3, p{
+.sidebar>h2,
+h3,
+p {
   color: black;
   word-wrap: break-word;
 }
@@ -446,7 +448,7 @@ select {
   align-items: center;
 }
 
-.title-guide-container > h3 {
+.title-guide-container>h3 {
   color: white;
 }
 
@@ -471,23 +473,23 @@ select {
   align-items: center;
 }
 
-.footer > * {
+.footer>* {
   margin-left: 15px;
   color: white;
   font-family: 'Lora', serif;
   font-weight: 600;
 }
 
-.footer > *:hover {
+.footer>*:hover {
   color: var(--home-button-hover);
 }
 
 
-.footer-title:hover{
+.footer-title:hover {
   color: white;
 }
 
-.footer-right-align{
+.footer-right-align {
   display: flex;
   align-items: center;
 }
@@ -497,9 +499,10 @@ select {
   margin-right: 0.5em;
 }
 
-.icon:hover{
+.icon:hover {
   color: var(--home-button-hover);
 }
+
 .go-definition {
   background-color: var(--light-background);
   color: #000;
@@ -637,8 +640,10 @@ h3 {
 }
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border: 16px solid #f3f3f3;
+  /* Light grey */
+  border-top: 16px solid #3498db;
+  /* Blue */
   border-radius: 50%;
   width: 120px;
   height: 120px;
@@ -650,7 +655,7 @@ h3 {
 .about-body {
   background-color: var(--reed-red);
   width: 1000px;
-  margin:auto;
+  margin: auto;
   margin-top: 50px;
   padding-left: 25px;
   padding-right: 25px;
@@ -661,45 +666,51 @@ h3 {
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.about-title{
+.about-title {
   padding-bottom: 5px;
   border-bottom: 3px solid white;
   text-align: center;
 }
 
-.about-body > p, .about-body > h3, .about-body-text{
+.about-body>p,
+.about-body>h3,
+.about-body-text {
   color: white;
   text-align: justify;
 
 }
 
-.about-body-text-heading{
+.about-body-text-heading {
   text-align: left;
   color: white;
 }
 
-.about-body > ul {
+.about-body>ul {
   list-style-type: disc;
 }
 
-.about-body> p > a, .about-list > li > a, .about-body-link{
+.about-body>p>a,
+.about-list>li>a,
+.about-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.about-body> p > a:hover, .about-body > p > ul > li > a:hover, .about-body-link:hover {
+.about-body>p>a:hover,
+.about-body>p>ul>li>a:hover,
+.about-body-link:hover {
   color: var(--text-hover);
 }
 
-.about-list > li > a:hover{
+.about-list>li>a:hover {
   color: var(--text-hover);
 }
 
 .faq-body {
   background-color: var(--reed-red);
   width: 1000px;
-  margin:auto;
+  margin: auto;
   margin-top: 50px;
   padding-left: 25px;
   padding-right: 25px;
@@ -710,45 +721,51 @@ h3 {
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.faq-title{
+.faq-title {
   padding-bottom: 5px;
   border-bottom: 3px solid white;
   text-align: center;
 }
 
-.faq-body > p, .faq-body > h3, .faq-body-text{
+.faq-body>p,
+.faq-body>h3,
+.faq-body-text {
   color: white;
   text-align: justify;
 
 }
 
-.faq-body-text-heading{
+.faq-body-text-heading {
   text-align: left;
   color: white;
 }
 
-.faq-body > ul {
+.faq-body>ul {
   list-style-type: disc;
 }
 
-.faq-body> p > a, .faq-list > li > a, .faq-body-link{
+.faq-body>p>a,
+.faq-list>li>a,
+.faq-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.faq-body> p > a:hover, .faq-body > p > ul > li > a:hover, .faq-body-link:hover {
+.faq-body>p>a:hover,
+.faq-body>p>ul>li>a:hover,
+.faq-body-link:hover {
   color: var(--text-hover);
 }
 
-.faq-list > li > a:hover{
+.faq-list>li>a:hover {
   color: var(--text-hover);
 }
 
 .tos-body {
   background-color: var(--reed-red);
   width: 1000px;
-  margin:auto;
+  margin: auto;
   margin-top: 50px;
   padding-left: 25px;
   padding-right: 25px;
@@ -759,45 +776,51 @@ h3 {
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.tos-title{
+.tos-title {
   padding-bottom: 5px;
   border-bottom: 3px solid white;
   text-align: center;
 }
 
-.tos-body > p, .tos-body > h3, .tos-body-text{
+.tos-body>p,
+.tos-body>h3,
+.tos-body-text {
   color: white;
   text-align: justify;
 
 }
 
-.tos-body-text-heading{
+.tos-body-text-heading {
   text-align: left;
   color: white;
 }
 
-.tos-body > ul {
+.tos-body>ul {
   list-style-type: disc;
 }
 
-.tos-body> p > a, .tos-list > li > a, .tos-body-link{
+.tos-body>p>a,
+.tos-list>li>a,
+.tos-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.tos-body> p > a:hover, .tos-body > p > ul > li > a:hover, .tos-body-link:hover {
+.tos-body>p>a:hover,
+.tos-body>p>ul>li>a:hover,
+.tos-body-link:hover {
   color: var(--text-hover);
 }
 
-.tos-list > li > a:hover{
+.tos-list>li>a:hover {
   color: var(--text-hover);
 }
 
 .home-body {
   background-color: var(--reed-red);
   width: 1000px;
-  margin:auto;
+  margin: auto;
   margin-top: 50px;
   padding-left: 25px;
   padding-right: 25px;
@@ -808,72 +831,83 @@ h3 {
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.home-title{
+.home-title {
   padding-bottom: 5px;
   border-bottom: 3px solid white;
 }
 
 .home-icon {
-  color:var(--graph-tan);
+  color: var(--graph-tan);
 }
 
-.home-feature-container{
+.home-feature-container {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.home-body-container{
+.home-body-container {
   display: flex;
   align-items: center;
 }
 
-.home-query-img{
+.home-query-img {
   width: 50%;
   margin-left: 75px;
   box-shadow: 0px -0px 10px 5px var(--shadow);
 }
 
-.home-feature-text{
+.home-feature-text {
   margin-left: 20px;
 }
 
-.home-button{
+.home-button {
   background-color: var(--graph-tan);
-  border: 1px solid black; /* Light grey */
+  border: 1px solid black;
+  /* Light grey */
   color: black;
   font-size: larger;
   font-weight: bold;
   margin-bottom: 25px;
 }
 
-.home-button:hover{
+.home-button:hover {
   background-color: var(--home-button-hover);
 }
 
-.home-link-about{
+.home-link-about {
   color: white;
   text-decoration: underline;
   font-size: larger;
   font-weight: bold;
 }
 
-.home-link-about:hover{
+.home-link-about:hover {
   color: var(--text-hover);
 }
 
-.faq-image-container{
+.faq-image-container {
   display: flex;
 }
 
-.subnetwork-image{
+.subnetwork-image {
   margin-left: 50px;
-  height:200px;
+  height: 200px;
+}
+
+.checkbox {
+  margin-left: 10px;
+  margin-top: 5px;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media (prefers-color-scheme: light) {
