Update FAQ w/ induced subgraph

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -907,6 +907,11 @@ h3 {
   height: 200px;
 }
 
+.induced-subgraph-image {
+  margin-left: 50px;
+  height: 180px;
+}
+
 .checkbox {
   margin-left: 10px;
   margin-top: 5px;
