--- a/client/src/index.css
+++ b/client/src/index.css
@@ -660,6 +660,14 @@ h3 {
   display: inline-block;
 }
 
+.go-source-symbol {
+  border: 2px solid black;
+  background-color: var(--reed-red);
+  height: 25px;
+  width: 25px;
+  display: inline-block;
+}
+
 .intermediate-symbol {
   border: 2px solid black;
   background-color: var(--graph-tan);
