--- a/client/src/index.css
+++ b/client/src/index.css
@@ -633,6 +633,14 @@ h3 {
   align-items: center;
 }
 
+.intermediate-dot-align {
+  width: 525px;
+  display: inline-flex;
+  align-items: center;
+  margin-top: -5px;
+  margin-bottom: 5px;
+}
+
 .key-align {
   display: flex;
 }
@@ -675,6 +683,7 @@ h3 {
   border-radius: 50%;
   width: 15px;
   display: inline-block;
+  margin-top: none;
 }
 
 .loader {
