--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #d5abab;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,12 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --graph-blue: #7F95D1;
+  --graph-blue: #7f95d1;
   --graph-blue-hover: #8faaf5;
-  --reed-red: #A70E16;
+  --reed-red: #a70e16;
   --reed-red-hover: #ca545a;
-  --graph-tan: #EDCB96;
-  --light-background: #EFE6DD;
+  --graph-tan: #edcb96;
+  --light-background: #efe6dd;
   --shadow: rgb(77, 66, 66);
   --text-hover: rgb(239, 199, 199);
   --home-button-hover: #fdd99f;
@@ -35,7 +35,7 @@ a:hover {
 }
 
 .website-title {
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
   font-weight: 500;
 }
 
@@ -121,11 +121,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.navbar>ul {
+.navbar > ul {
   list-style-type: none;
 }
 
-.navbar>ul>* {
+.navbar > ul > * {
   margin-left: 10px;
   color: black;
 }
@@ -136,8 +136,9 @@ button:focus-visible {
   padding-left: 25px;
   padding-right: 25px;
   border-bottom: solid;
-  background: #A70E16;
+  background: #a70e16;
   min-width: 1080px;
+  max-height: 70px;
 }
 
 .navbar-menu {
@@ -147,7 +148,7 @@ button:focus-visible {
 
 .navbar-menu-button {
   padding: 6px 3px 3px 3px;
-  background-color: #EDCB96;
+  background-color: #edcb96;
   border-color: #000;
   border-radius: 4px;
   color: black;
@@ -218,7 +219,7 @@ body {
   color: white;
 }
 
-.example>a {
+.example > a {
   color: white;
   text-decoration: underline;
   cursor: pointer;
@@ -349,10 +350,9 @@ select {
   margin-top: 5px;
   overflow-y: scroll;
   box-shadow: 0px -0px 10px 5px var(--shadow);
-
 }
 
-.sidebar>h2,
+.sidebar > h2,
 h3,
 p {
   color: black;
@@ -372,7 +372,7 @@ p {
 
 .query-error {
   align-self: center;
-  background-color: #EED202;
+  background-color: #eed202;
   border-radius: 10px;
   margin-top: 20px;
   padding: 5px;
@@ -450,7 +450,7 @@ select {
   border-radius: 2px;
 }
 
-.autocomplete>.active,
+.autocomplete > .active,
 .autocomplete li:hover {
   background-color: rgba(0, 0, 0, 0.24);
   cursor: pointer;
@@ -470,7 +470,7 @@ select {
   align-items: center;
 }
 
-.title-guide-container>h3 {
+.title-guide-container > h3 {
   color: white;
 }
 
@@ -487,25 +487,24 @@ select {
 
 .footer {
   margin-left: 40%;
-  margin-top: 70px;
+  margin-top: 10px;
   margin-bottom: 10px;
-  color: white;
+  color: black;
   text-align: center;
   display: flex;
   align-items: center;
 }
 
-.footer>* {
+.footer > * {
   margin-left: 15px;
-  color: white;
-  font-family: 'Lora', serif;
+  color: black;
+  font-family: "Lora", serif;
   font-weight: 600;
 }
 
-.footer>*:hover {
+.footer > *:hover {
   color: var(--home-button-hover);
 }
-
 
 .footer-title:hover {
   color: white;
@@ -589,7 +588,7 @@ h3 {
 }
 
 .legend-text {
-  display: inline-block
+  display: inline-block;
 }
 
 .legend-container {
@@ -614,7 +613,7 @@ h3 {
 }
 
 .grey-line {
-  background-color: #ACA9A4;
+  background-color: #aca9a4;
   border: none;
   height: 3px;
   width: 60px;
@@ -710,12 +709,11 @@ h3 {
   text-align: center;
 }
 
-.about-body>p,
-.about-body>h3,
+.about-body > p,
+.about-body > h3,
 .about-body-text {
   color: white;
   text-align: justify;
-
 }
 
 .about-body-text-heading {
@@ -723,25 +721,25 @@ h3 {
   color: white;
 }
 
-.about-body>ul {
+.about-body > ul {
   list-style-type: disc;
 }
 
-.about-body>p>a,
-.about-list>li>a,
+.about-body > p > a,
+.about-list > li > a,
 .about-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.about-body>p>a:hover,
-.about-body>p>ul>li>a:hover,
+.about-body > p > a:hover,
+.about-body > p > ul > li > a:hover,
 .about-body-link:hover {
   color: var(--text-hover);
 }
 
-.about-list>li>a:hover {
+.about-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -765,12 +763,11 @@ h3 {
   text-align: center;
 }
 
-.faq-body>p,
-.faq-body>h3,
+.faq-body > p,
+.faq-body > h3,
 .faq-body-text {
   color: white;
   text-align: justify;
-
 }
 
 .faq-body-text-heading {
@@ -778,25 +775,25 @@ h3 {
   color: white;
 }
 
-.faq-body>ul {
+.faq-body > ul {
   list-style-type: disc;
 }
 
-.faq-body>p>a,
-.faq-list>li>a,
+.faq-body > p > a,
+.faq-list > li > a,
 .faq-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.faq-body>p>a:hover,
-.faq-body>p>ul>li>a:hover,
+.faq-body > p > a:hover,
+.faq-body > p > ul > li > a:hover,
 .faq-body-link:hover {
   color: var(--text-hover);
 }
 
-.faq-list>li>a:hover {
+.faq-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -820,12 +817,11 @@ h3 {
   text-align: center;
 }
 
-.tos-body>p,
-.tos-body>h3,
+.tos-body > p,
+.tos-body > h3,
 .tos-body-text {
   color: white;
   text-align: justify;
-
 }
 
 .tos-body-text-heading {
@@ -833,25 +829,25 @@ h3 {
   color: white;
 }
 
-.tos-body>ul {
+.tos-body > ul {
   list-style-type: disc;
 }
 
-.tos-body>p>a,
-.tos-list>li>a,
+.tos-body > p > a,
+.tos-list > li > a,
 .tos-body-link {
   color: white;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.tos-body>p>a:hover,
-.tos-body>p>ul>li>a:hover,
+.tos-body > p > a:hover,
+.tos-body > p > ul > li > a:hover,
 .tos-body-link:hover {
   color: var(--text-hover);
 }
 
-.tos-list>li>a:hover {
+.tos-list > li > a:hover {
   color: var(--text-hover);
 }
 
@@ -1054,7 +1050,7 @@ h3 {
   width: 120px;
   align-self: center;
   margin-left: 10px;
-  filter: blur(1px)
+  filter: blur(1px);
 }
 
 .active-button:hover,
@@ -1086,4 +1082,21 @@ h3 {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.panel-container {
+  border-bottom: 2px solid  #828588;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Minimum height is 100% of the viewport height */
+}
+
+.panel-resize-handle {
+  background-color: #828588;
+  padding: 2.5px 2.5px;
+}
+
+.panel {
+  display: flex;
+  flex-direction: column; min-height: 100vh;
 }
