--- a/client/src/index.css
+++ b/client/src/index.css
@@ -991,6 +991,40 @@ h3 {
   display: flex;
 }
 
+.hierarchy-input-container {
+  position: relative;
+}
+
+.info-icon {
+  position: absolute;
+  left: -20px;
+  top: 50%;
+  transform: translateY(50%);
+  color: grey;
+}
+
+.hierarchy-warning {
+  position: absolute;
+  top: calc(100% + 5px);
+  left: 0;
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 12px;
+  z-index: 1;
+  display: none;
+  text-align: center;
+}
+
+.info-icon-container {
+  position: relative;
+}
+
+.info-icon-container:hover .hierarchy-warning {
+  display: block;
+}
+
 .change-layout {
   cursor: pointer;
   margin: 2px;
