Add warning for never annotate and made inferred qualifier bold

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -959,11 +959,11 @@ h3 {
 }
 
 .ancestor-input {
-  width: 110px;
+  width: 120px;
 }
 
 .ancestor-input input {
-  width: 110px;
+  width: 120px;
   margin-bottom: 5px;
 }
 
@@ -973,11 +973,11 @@ h3 {
 }
 
 .descendant-input {
-  width: 110px;
+  width: 120px;
 }
 
 .descendant-input input {
-  width: 110px;
+  width: 120px;
   margin-top: 5px;
 }
 
@@ -1007,11 +1007,11 @@ h3 {
   position: absolute;
   top: calc(100% + 5px);
   left: 0;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0, 0.75);
   color: #fff;
   padding: 5px;
   border-radius: 5px;
-  font-size: 12px;
+  font-size: 10px;
   z-index: 1;
   display: none;
   text-align: center;
@@ -1022,6 +1022,37 @@ h3 {
 }
 
 .info-icon-container:hover .hierarchy-warning {
+  display: block;
+}
+
+.never-annotate-container {
+  position: relative;
+}
+
+.never-annotate-icon {
+  position: absolute;
+  top: -50px;
+  left: 80px;
+  color: var(--graph-blue);
+  /* Adjust this value as needed */
+}
+
+.never-annotate-warning {
+  position: absolute;
+  top: -35px;
+  left: 60px;
+  /* Adjust this value as needed */
+  background-color: rgba(0, 0, 0, 0.75);
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 10px;
+  z-index: 1;
+  display: none;
+  text-align: center;
+}
+
+.never-annotate-container:hover .never-annotate-warning {
   display: block;
 }
 
